--- a/DM553/Slides/Question9.tex
+++ b/DM553/Slides/Question9.tex
@@ -65,7 +65,7 @@
 	\item Lemma 2.10: Den gennemsnitlige længe af en vej i et 2-træ med $l$ blade er mindst $\lfloor \log l \rfloor$.
 	\item Beviset her er ret nemt:
 		  \begin{equation}
-\frac{l \lfloor \log l \rfloor + 2(l-2^{\lfloor \log l \rfloor})}{l} + \varepsilon
+\frac{l \lfloor \log l \rfloor + 2(l-2^{\lfloor \log l \rfloor})}{l}  = \lfloor \log l\rfloor + \varepsilon
 		  \end{equation}
 
 	\item Hvor \(0 \le \varepsilon < 1\) da $l-2^{\lfloor \log l \rfloor }< \frac{l}{2}$, fordi $l > 2^{\lfloor \log l \rfloor}$
