--- a/preamble.tex
+++ b/preamble.tex
@@ -41,7 +41,9 @@
 
 \usepackage{tikz} % Til grafer
 \usetikzlibrary{automata} % Til automatgrafer
+\usetikzlibrary{trees} % Til træstrukturer
 \usetikzlibrary{positioning} % Positionering af knuder
+ \usetikzlibrary {graphs.standard}  % til grafer
 \usetikzlibrary{arrows.meta, arrows} % arrows til at ændre kanter
 \tikzset{
 	node distance=2.5cm, % minimumsdistancen mellem to knuderj
